# Dolos

./: CMakeLists.txt  main.cpp
include/: config.h.in
include/Server/: Server.h
src/: Server.cpp
src/Client/: main.cpp
src/Server/: Server.cpp  main.cpp
